<resources>
    <string name="app_name">Smart Traffic</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="bt_hal_home_insert_rs">Inserter RS</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Sign In</string>
    <string name="register_new_account">Register New Account</string>
    <string name="already_have_account_sign_me">Already have Account? Sign me!</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_an_account_sign_up">Dont have an account? Sign up!</string>
    <string name="kontroler_lampu">Kontroler Lampu</string>
    <string name="inserter_tl">Inserter TL</string>
    <string name="inserter_rs">Inserter RS</string>
    <string name="admin_page">Admin Page</string>
    <string name="set_destination">Set Destination</string>
    <string name="rumah_sakit_name">Rumah Sakit name</string>
    <string name="data_rumah_sakit">Data Rumah Sakit</string>
    <string name="data_user">Data User</string>
    <string name="loc_by_gps">Loc by GPS</string>
    <string name="insert_rs">Insert RS</string>
    <string name="choose_image">Choose Image</string>
    <string name="simpan_data_rs">Simpan Data RS</string>
    <string name="name_to_update">Name to Update</string>
    <string name="name_value_update">Name Value Update</string>
    <string name="update">Update</string>
    <string name="tl_area">TL Area</string>

</resources>
