<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="15dp"
    tools:context="aplikasiku.navwithdirectionlib.AdminActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layoutadmintlarea">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TL Area"
            android:layout_marginLeft="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <Spinner
            android:id="@+id/spinnerAdminTLarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/itemArea"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:background="@color/divider"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_admin_tllist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layoutadmintlarea"
        android:layout_marginBottom="160dp"/>

    <Button
        android:background="@drawable/custom_button_green"
        android:textColor="@color/white"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/buttonAdminKontrolLampu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="-170dp"
        android:layout_below="@id/recyclerview_admin_tllist"
        android:text="@string/kontroler_lampu" />

    <Button
        android:background="@drawable/custom_button_green"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/buttonAdminInsertTL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonAdminKontrolLampu"
        android:text="@string/inserter_tl" />

    <Button
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_button_green"
        android:textColor="@color/white"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/buttonAdminInsertRS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonAdminInsertTL"
        android:text="@string/inserter_rs" />
</RelativeLayout>
