<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".hal_home"
    android:background="#FFE8E8E8">

    <TextView
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_user"/>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/layoutProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="2dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/account_logo" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewIdLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="identitas login" />

                    <TextView
                        android:id="@+id/textViewPosisiLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="posisi" />

                    <TextView
                        android:id="@+id/textViewLatLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Latitude" />

                    <TextView
                        android:id="@+id/textViewLongLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Longitude" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/data_rumah_sakit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_below="@id/layoutProfile"
        android:layout_marginTop="10dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewListRS"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonKontrolerLampu"
        android:layout_below="@+id/textView"
        android:scrollbars="vertical" />

    <Button
        android:textColor="@color/white"
        android:background="@drawable/custom_button_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/admin_page"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/buttonKontrolerLampu"/>

    <Button
        android:textColor="@color/white"
        android:background="@drawable/custom_button_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_destination"
        android:layout_marginBottom="60dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/butSetDestination"/>

</RelativeLayout>
